# Triyx

./: BRANDING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
V1/: .gitignore  CMakeLists.txt  LICENSE  README.md
V1/shaders/: fragment.glsl  vertex.glsl
V1/src/: main.cpp
V1/src/rendering/: rendering.cpp  rendering.hpp
